# computor_v2

./: CMakeLists.txt  EquationProc.cpp  EquationProc.h  Matrix.cpp  Matrix.h  MatrixCalc.cpp  MatrixCalc.h  RevPolNotation.cpp  RevPolNotation.h  computor.cpp  computor.h  main.cpp  rev_pol_notation.cpp  test_main.cpp
doc/: math_test.txt
